--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "demo-trial",
   "private": true,
   "dependencies": {
-    "vue": "^2.6.11"
+    "@rails/webpacker": "4.2.2",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3.10.1"
   }
 }
